# parcus

./: .gitignore  README.md  auto_annotate.py  config.py  generate_plots.py  phase1_main.py  phase1b_stochastic.py  phase2_analyze.py  phase2_prepare.py  phase3_cliff.py  phase3_structure.py  pyproject.toml  requirements.txt  run_all.py  setup.py  test_setuppy  utils.py  view_annotations.py  visualize.py
annotations/: annotate_errors_budget1024.tsv  annotate_errors_budget128.tsv  annotate_errors_budget256.tsv  annotate_errors_budget512.tsv  annotate_successes_budget1024.tsv  annotate_successes_budget128.tsv  annotate_successes_budget256.tsv  annotate_successes_budget512.tsv  annotation_manifest.json
parcus/: __args__.py  __init__.py  __main__.py  __meta__.py
parcus/commands/: __init__.py
parcus/commands/bump_version/: __args__.py  __init__.py  __main__.py
parcus/configuration/: __init__.py  command_config.py  dataset_config.py  exceptions.py  model_config.py  protocol.py
parcus/datasets/: __init__.py
parcus/models/: __init__.py  protocol.py
parcus/registration/: __init__.py  decorators.py
parcus/utilities/: __init__.py  banner.py  logging.py  system.py
results/: phase1_combined_qwen-1.5b.json  phase1_main_qwen-1.5b_budget1024.json  phase1_main_qwen-1.5b_budget128.json  phase1_main_qwen-1.5b_budget2048.json  phase1_main_qwen-1.5b_budget256.json  phase1_main_qwen-1.5b_budget32.json  phase1_main_qwen-1.5b_budget512.json  phase1_main_qwen-1.5b_budget64.json  phase1b_combined_qwen-1.5b.json  phase1b_stochastic_qwen-1.5b_budget1024.json  phase1b_stochastic_qwen-1.5b_budget512.json  phase3_cliff_qwen-1.5b_budget112.json  phase3_cliff_qwen-1.5b_budget128.json  phase3_cliff_qwen-1.5b_budget144.json  phase3_cliff_qwen-1.5b_budget160.json  phase3_cliff_qwen-1.5b_budget176.json  phase3_cliff_qwen-1.5b_budget192.json  phase3_cliff_qwen-1.5b_budget208.json  phase3_cliff_qwen-1.5b_budget224.json  phase3_cliff_qwen-1.5b_budget240.json  phase3_cliff_qwen-1.5b_budget256.json  phase3_cliff_qwen-1.5b_budget96.json  phase3_combined_qwen-1.5b.json  phase3_structure_analysis_qwen-1.5b.json
(+54 files in other folders)
